<resources>
    <string name="app_name">File Manager</string>
    <string name="storage_statistics">Storage Statistics</string>
    <string name="sort_by">Sort By</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="file_icon">File icon</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="ascending">Ascending</string>
    <string name="date_modified">Date Modified</string>
    <string name="refresh">Refresh</string>
    <string name="descending">Descending</string>
    <string name="please_select_the_order">Please Select The Order</string>
    <string name="properties">Properties</string>
    <string name="paste">Paste</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="plese_enter_file_name">Please Enter File Name</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="path">Path</string>
    <string name="last_modified">Last Modified</string>
    <string name="writable">Writable</string>
    <string name="share">Share</string>
    <string name="pictures">Pictures</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="downloads">Downloads</string>
    <string name="documents">Documents</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="docs">Docs</string>
    <string name="fav">Favourites</string>
    <string name="pin_to_favourites">Pin to Favourites</string>
    <string name="remove">Remove</string>
</resources>
