<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cut"
        android:icon="@drawable/cut"
        android:title="@string/cut" />
    <item
        android:id="@+id/copy"
        android:icon="@drawable/copy"
        android:title="@string/copy" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/rename"
        android:icon="@drawable/rename"
        android:title="@string/rename" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/properties"
        android:title="@string/properties"
        app:showAsAction="never" />
    <item
        android:id="@+id/pin"
        android:title="@string/pin_to_favourites" />
    <item
        android:id="@+id/remove"
        android:title="@string/remove"
        android:visible="false" />

</menu>